--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
     position: fixed;
     top: 20px;
     left: 20px;
-    z-index: 1000;
+    z-index: 1500;
     width: 30px;
     height: 22px;
     display: flex;
@@ -49,6 +49,7 @@ body {
     justify-content: space-between;
     cursor: pointer;
 }
+
 .hamburger div {
     height: 4px;
     background: var(--accent);
@@ -80,7 +81,9 @@ body {
     padding-top: 60px;
     display: flex;
     flex-direction: column;
+    z-index: 2000; /* <- important, plus haut que le hamburger et sections */
 }
+
 .menu a {
     padding: 15px 20px;
     border-bottom: 1px solid var(--gris);
