--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     cursor: pointer;
+    z-index: 2500; 
 }
 
 .hamburger div {
@@ -80,6 +81,7 @@ body {
     padding-top: 60px;
     display: flex;
     flex-direction: column;
+      z-index: 2000; 
 }
 
 .menu a {
